<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>dfe</artifactId>
        <groupId>io.github.artur-oliveira</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>dfe-core</artifactId>
    <name>DF-e Core</name>
    <description>DF-e core project</description>

    <dependencies>
        <dependency>
            <groupId>io.github.artur-oliveira</groupId>
            <artifactId>dfe-api</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>s3</artifactId>
            <version>${software.amazon.awssdk.version}</version>
        </dependency>

        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>dynamodb</artifactId>
            <version>${software.amazon.awssdk.version}</version>
        </dependency>

        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>${xerces.version}</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <software.amazon.awssdk.version>2.33.0</software.amazon.awssdk.version>
        <xerces.version>2.12.2</xerces.version>
    </properties>

</project>
